# mahjong

./: .gitignore  .project-settings.yml  .stylish-haskell.yaml  .travis.yml  LICENSE  Mahsjong.cabal  README.md  circle.yml  mahjong.cabal  mahsjong.cabal  mahsjong.hs  stack.yaml
src/: Cycle.hs  Mahsjong.hs
src/Mahjong/: Board.hs  Class.hs  Dora.hs  Game.hs  Hand.hs  Meld.hs  Player.hs  Riichi.hs  Seat.hs  Shanten.hs  Tile.hs
src/Mahjong/Class/: Cycle.hs  Suit.hs
src/Mahjong/Meld/: Fold.hs
src/Mahjong/Riichi/: Base.hs  FourPlayer.hs  Hand.hs  Player.hs  Round.hs  Shanten.hs  ThreePlayer.hs  Tile.hs  Turn.hs
src/Mahjong/Tile/: Riichi.hs
src/Mahsjong/: Cycle.hs  Hand.hs  Meld.hs  Riichi.hs  Tile.hs
src/Mahsjong/Riichi/: Meld.hs  Shanten.hs
test/: Main.hs
tests/: Test.hs  Tile.hs
tests/Tests/: Tile.hs
tests/Tests/Mahjong/: Meld.hs  Tile.hs
