name:          mahjong
version:       0.0.0.0
synopsis:      Mahjong library
license:       MIT
license-file:  LICENSE
author:        Michael Borden
maintainer:    michael@ispabuse.org
category:      Game
build-type:    Simple
cabal-version: >= 1.10

library
  exposed-modules: Mahjong.Dora
                 , Mahjong.Meld
                 , Mahjong.Riichi
                 , Mahjong.Riichi.Base
                 , Mahjong.Riichi.FourPlayer
                 , Mahjong.Riichi.Hand
                 , Mahjong.Riichi.Player
                 , Mahjong.Riichi.Round
                 , Mahjong.Riichi.ThreePlayer
                 , Mahjong.Riichi.Tile
                 , Mahjong.Riichi.Turn
                 , Mahjong.Seat
                 , Mahjong.Tile

  build-depends: base >= 4.6 && < 5             
               , either >= 4.4.1 && < 4.4.2
               , lens >= 4.12 && < 4.13
               
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
