name:          mahjong
version:       0.0.0.0
synopsis:      Mahjong library
license:       MIT
license-file:  LICENSE
author:        Michael Borden
maintainer:    michael@ispabuse.org
category:      Game
build-type:    Simple
cabal-version: >= 1.10

library
  exposed-modules: Mahjong.Dora
                 , Mahjong.Meld
                 , Mahjong.Riichi
                 , Mahjong.Riichi.FourPlayer
                 , Mahjong.Riichi.ThreePlayer
                 , Mahjong.Seat
                 , Mahjong.Tile

  other-modules: Mahjong.Riichi.Hand
               , Mahjong.Riichi.Player
               , Mahjong.Riichi.Round
               , Mahjong.Riichi.Shanten
               , Mahjong.Riichi.Tile
               , Mahjong.Riichi.Turn

  build-depends: base >= 4.6 && < 5
               , containers
               , either >= 4.4.1 && < 4.4.2
               , lens >= 4.12 && < 4.13
               
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

test-suite mahjong-test
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Test.hs

  other-modules: Tests.Mahjong.Meld
               , Tests.Mahjong.Tile

  build-depends: base
               , mahjong
               , smallcheck == 1.1.1
               , tasty == 0.10.1.2
               , tasty-hunit == 0.9.2
               , tasty-quickcheck == 0.8.3.2
               , tasty-smallcheck == 0.8.0.1

  default-language: Haskell2010
  ghc-options: -O2 -Wall -threaded -rtsopts -with-rtsopts=-N