name:                mahjong
version:             0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/taksuyu/mahjong#readme
license:             MIT
license-file:        LICENSE
author:              Michael Borden
maintainer:          michael@quiet.space
copyright:           2017 Michael Borden
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Mahjong.Board
                     , Mahjong.Class
                     , Mahjong.Game
                     , Mahjong.Hand
                     , Mahjong.Meld.Fold
                     , Mahjong.Player
                     , Mahjong.Riichi
                     , Mahjong.Riichi.FourPlayer
                     , Mahjong.Riichi.ThreePlayer
                     , Mahjong.Tile
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , multiset
                     , unordered-containers
  default-language:    Haskell2010

-- executable mahjong-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , mahjong
--   default-language:    Haskell2010

test-suite mahjong-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , doctest
                     , mahjong
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/taksuyu/mahjong
