name:                Mahsjong
version:             0.0.0.0
synopsis:            Mahjong library
license:             MIT
license-file:        LICENSE
author:              taksuyu
maintainer:          tak@ispabuse.org
category:            Game
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules:   Mahsjong.Riichi
                   , Mahsjong.Tile

  build-depends:     base
                   , containers == 0.5.5.*

  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:      -Wall
